--- a/_includes/toc-date.html
+++ b/_includes/toc-date.html
@@ -75,7 +75,7 @@
                 {% endif %}
             {% endfor %}
 
-            <br>&nbsp;&nbsp;© Siau Lah-jih（蕭平治）<br><br><br>
+            <br>&nbsp;&nbsp;© Tân Sió-tâi<br><br><br>
 
             <!-- <li>
                 <a href="https://github.com/sighingnow/jekyll-gitbook/fork" target="blank" class="gitbook-link">
