--- a/_includes/toc-date.html
+++ b/_includes/toc-date.html
@@ -34,7 +34,7 @@
                         {% endif %}
 
                         <!--{% if post.show_chapter == 1 %}
-                            <h4>&nbsp;&nbsp;鹹酸甜第1冊</h4>
+                            <h4>&nbsp;&nbsp;生活記事</h4>
                         {% elsif post.show_chapter == 2 %}
                             <h4>&nbsp;&nbsp;鹹酸甜第2冊</h4>
                         {% elsif post.show_chapter == 3 %}
