--- a/_includes/toc-date.html
+++ b/_includes/toc-date.html
@@ -33,8 +33,7 @@
                             <li class="chapter" data-level="1.1" data-path="{{site.baseurl}}{{post.url}}">
                         {% endif %}
 
-                        <!--{% if post.show_chapter == 1 %}
-                        {% elsif post.show_chapter == 1 %}
+                        {% if post.show_chapter == 1 %}
                             <h4>&nbsp;&nbsp;生活記事</h4>
                         {% elsif post.show_chapter == 2 %}
                             <h4>&nbsp;&nbsp;鹹酸甜第2冊</h4>
@@ -42,7 +41,7 @@
                             <h4>&nbsp;&nbsp;鹹酸甜第3冊</h4>
                         {% elsif post.show_chapter == 4 %}
                             <h4>&nbsp;&nbsp;鹹酸甜第4冊</h4>
-                        {% endif %} -->
+                        {% endif %} 
 
                         {% if collection.label == "posts" %}
                             <b>
@@ -76,7 +75,7 @@
                 {% endif %}
             {% endfor %}
 
-            <br>&nbsp;&nbsp;© Tân Sió-tâi<br><br><br>
+            <br>&nbsp;&nbsp;© BuLùSuh (Chhòa It-bîn)<br><br><br>
 
             <!-- <li>
                 <a href="https://github.com/sighingnow/jekyll-gitbook/fork" target="blank" class="gitbook-link">
